--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <main>
             <div class="intro">
-                This is a sample PWA - even with no internet, this content should be visible! :D
+                This is a sample PWA - even with no internet, this content should be visible! <img src="images/smiley.png" alt="Smiley Face" width="36" height="30">
             </div>
         </main>
         <script src="js/scripts.js"></script>
