--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <main>
             <div class="intro">
                 This is a sample PWA - even with no internet, this content should be visible! <img src="images/smiley.png" alt="Smiley Face" width="36" height="30">
+                <br>
+                <br>
+                However, when updated, the new version should be visible!
             </div>
         </main>
         <script src="js/scripts.js"></script>
