Overhaul for updating

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
                 This is a sample PWA - even with no internet, this content should be visible! <img src="images/smiley.png" alt="Smiley Face" width="36" height="30">
                 <br>
                 <br>
-                However, when updated, the new version should be visible! Current V8
+                However, when updated, the new version should be visible! Current V1.01
             </div>
+            <div id="update">Click here to update</div>
         </main>
         <script src="js/scripts.js"></script>
     </body>
