--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
                 This is a sample PWA - even with no internet, this content should be visible! <img src="images/smiley.png" alt="Smiley Face" width="36" height="30">
                 <br>
                 <br>
-                However, when updated, the new version should be visible! Current V1.16
+                However, when updated, the new version should be visible! Current V1.17
             </div>
-            <div id="update">Click here to update</div>
+            <div id="update">App update found - click here to start update</div>
+            <div id="update">App update started - click here to finalise</div>
         </main>
         <script src="js/scripts.js"></script>
     </body>
