--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <br>
                 However, when updated, the new version should be visible! Current V1.17
             </div>
-            <div id="update">App update found - click here to start update</div>
+            <div id="otherUpdate">App update found - click here to start update</div>
             <div id="update">App update started - click here to finalise</div>
         </main>
         <script src="js/scripts.js"></script>
