--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>PWA Sample</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/style.css?v=version-1.43">
         <link rel="manifest" href="manifest.json">
         <link rel="apple-touch-icon" href="icons/icon-180x180.png">
         <meta name="apple-mobile-web-app-status-bar" content="#4cb0b9">
@@ -17,11 +17,13 @@
                 This is a sample PWA - even with no internet, this content should be visible! <img src="images/smiley.png" alt="Smiley Face" width="36" height="30">
                 <br>
                 <br>
-                However, when updated, the new version should be visible! Current V1.28
+                However, when updated, the new version should be available with an update!
+                <img src="images/smiley.png" alt="Smiley Face" width="36" height="30">
+                version-1.43 now!
             </div>
             <div id="otherUpdate">App update found - click here to start update</div>
             <div id="update">App update started - click here to finalise</div>
         </main>
-        <script src="js/scripts.js"></script>
+        <script src="js/scripts.js?v=version-1.43"></script>
     </body>
 </html>
