--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <link rel="stylesheet" href="css/style.css?v=version-1.43">
         <link rel="manifest" href="manifest.json">
         <link rel="apple-touch-icon" href="icons/icon-180x180.png">
-        <meta name="apple-mobile-web-app-status-bar" content="#4cb0b9">
-        <meta name="theme-color" content="#4cb0b9">
+        <meta name="apple-mobile-web-app-status-bar" content="#07e7e7">
+        <meta name="theme-color" content="#07e7e7">
     </head>
     <body>
         <main>
