--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
         <meta name="description" content="Keto Tracker">
         <link href="https://fonts.googleapis.com/css?family=Work+Sans&display=swap" rel="stylesheet">
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-        <link rel="stylesheet" href="css/style.css?v=version-1.05">
+        <link rel="stylesheet" href="css/style.css?v=version-1.06">
         <link rel="manifest" href="manifest.json">
-        <link rel="apple-touch-icon" href="icons/icon-180x180.png">
-        <meta name="apple-mobile-web-app-status-bar" content="#07e7e7">
-        <meta name="theme-color" content="#07e7e7">
+        <link rel="apple-touch-icon" href="icons/icon-256x256.png">
+        <meta name="apple-mobile-web-app-status-bar" content="#d13aba">
+        <meta name="theme-color" content="#d13aba">
     </head>
     <body>
         <div class="window">
