--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div id="content">
                     <div class="overflow-box">
                         <div class="list-items">
-                            <div class="list-item" id="list-item-1">
+                            <div class="list-item" id="list-item-1" data-row="1">
                                 <a class="close button left">
                                     <img src="images/close-white.svg?v=version-1.15" alt="Delete" width="30" height="30" />
                                 </a>
