--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
         <meta name="description" content="Keto Tracker">
         <link href="https://fonts.googleapis.com/css?family=Work+Sans&display=swap" rel="stylesheet">
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-        <link rel="stylesheet" href="css/style.css?v=version-1.17">
+        <link rel="stylesheet" href="css/style.css?v=version-1.18">
         <link rel="manifest" href="manifest.json">
         <link rel="apple-touch-icon" href="icons/icon-256x256.png">
-        <meta name="apple-mobile-web-app-status-bar" content="#d13aba">
-        <meta name="theme-color" content="#d13aba">
+        <meta name="apple-mobile-web-app-status-bar" content="#000000">
+        <meta name="theme-color" content="#000000">
     </head>
     <body>
         <div class="window">
@@ -22,6 +22,7 @@
             </div>
             <div class="body">
                 <div id="calorie-total">
+                    <div class="fade"></div>
                     <span class="total">0</span>
                     <span class="unit">kCal</span>
                     <span class="totalS">0.0</span>
@@ -32,7 +33,7 @@
                         <div class="list-items">
                             <div class="list-item" id="list-item-1" data-row="1">
                                 <a class="close button left">
-                                    <img src="images/close-white.svg?v=version-1.17" alt="Delete" width="30" height="30" />
+                                    <img src="images/close-white.svg?v=version-1.18" alt="Delete" width="30" height="30" />
                                 </a>
                                 <input class="food description left" type="text" name="description" value="" placeholder="Food" />
                                 <input class="food calories left" type="tel" name="calories" value="" placeholder="kCal" />
@@ -47,22 +48,22 @@
                 </div>
             </div>
             <div class="footer tabs">
-                <div id="tab1" class="tab">
-                    <img src="images/tab-icon-01.svg?v=version-1.17" alt="Reset" width="35" height="35" />
+                <!-- <div id="tab1" class="tab">
+                    <img src="images/tab-icon-01.svg?v=version-1.18" alt="Reset" width="35" height="35" />
                     <div class="title">reset</div>
-                </div>
-                <div id="tab2" class="tab on">
-                    <img src="images/tab-icon-02.svg?v=version-1.17" alt="Add" width="35" height="35" />
+                </div> -->
+                <div id="tab2" class="add-list-item tab on">
+                    <img src="images/tab-icon-02.svg?v=version-1.18" alt="Add" width="35" height="35" />
                     <div class="title">calories</div>
                 </div>
-                <div id="tab3" class="tab">
-                    <img src="images/tab-icon-03.svg?v=version-1.17" alt="Calculator" width="35" height="35" />
+                <<!-- div id="tab3" class="tab">
+                    <img src="images/tab-icon-03.svg?v=version-1.18" alt="Calculator" width="35" height="35" />
                     <div class="title">calculator</div>
-                </div>
+                </div> -->
             </div>
         </div>
-		<script type="text/javascript" src="js/jquery.min.js?v=version-1.17"></script>
-        <script type="text/javascript" src="js/scripts.js?v=version-1.17"></script>
-        <script type="text/javascript" src="js/pwa.js?v=version-1.17"></script>
+		<script type="text/javascript" src="js/jquery.min.js?v=version-1.18"></script>
+        <script type="text/javascript" src="js/scripts.js?v=version-1.18"></script>
+        <script type="text/javascript" src="js/pwa.js?v=version-1.18"></script>
     </body>
 </html>
